# icoengine

./: .gitignore  CMakeLists.txt  compiler.py  readme.md
.github/workflows/: cmake.yml
src/: config.h  glad.c  glad.h  main.cpp  objparser.cpp  objparser.h
src/assets/meshes/: triangle_mesh.cpp  triangle_mesh.h
src/assets/shaders/: fragment.c  vertex.c
